--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,8 @@ skips = ["B101","B506"]
 ignore_missing_imports = true
 
 [tool.pytest.ini_options]
+log_cli = true
+log_cli_level = "debug"
 markers = [
     "functional",
     "utils",
