--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "jaxa"
-version = "0.1.0"
+version = "1.1.0"
 description = "Jira and Xray API"
 authors = ["Gleams API user <Stephen.Swannell+ghapi@gmail.com>"]
 license = "GNU GENERAL PUBLIC LICENSE"
@@ -9,11 +9,8 @@ keywords = ["jira", "xray", "rest", "graphql", "api"]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
-python-decouple = "^3.6"
 gql = "^3.4.0"
 requests-toolbelt = "^0.10.1"
-aiohttp = "^3.8.3"
-aiodns = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 nox = "^2022.1.7"
@@ -65,4 +62,16 @@ log_cli_level = "debug"
 markers = [
     "functional",
     "utils",
+    "jira",
+    "issues",
+    "labels",
+    "links",
+    "fields",
+    "customfields",
+    "xray",
+    "authentication",
+    "testexecutions",
+    "testruns",
+    "tests",
+    "testplans"
 ]
