--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "jaxa"
-version = "1.1.0"
+version = "1.2.0"
 description = "Jira and Xray API"
 authors = ["Gleams API user <Stephen.Swannell+ghapi@gmail.com>"]
 license = "GNU GENERAL PUBLIC LICENSE"
@@ -11,6 +11,7 @@ keywords = ["jira", "xray", "rest", "graphql", "api"]
 python = ">=3.8,<4.0"
 gql = "^3.4.0"
 requests-toolbelt = "^0.10.1"
+tenacity = "^8.2.2"
 
 [tool.poetry.dev-dependencies]
 nox = "^2022.1.7"
